--- a/.gitignore
+++ b/.gitignore
@@ -16,18 +16,16 @@
 /public/logo192.png
 /public/logo512.png
 
-#src
-/src/componentes/BarraDesplegable.js
-/src/componentes/Hamburguesa.js
-/src/componentes/MenuDesplegable.js
-
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+/src/imgs
 process.env
+/.firebase
+.firebaserc
 
 npm-debug.log*
 yarn-debug.log*
