--- a/.gitignore
+++ b/.gitignore
@@ -16,16 +16,19 @@
 /public/logo192.png
 /public/logo512.png
 
+#src
+/src/imgs
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-/src/imgs
 process.env
-/.firebase
+.firebase
 .firebaserc
+firebase.json
 
 npm-debug.log*
 yarn-debug.log*
