--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,9 @@
 .env.test.local
 .env.production.local
 process.env
-.firebase
-.firebaserc
-firebase.json
+/.firebase
+/.firebaserc
+/firebase.json
 
 npm-debug.log*
 yarn-debug.log*
