--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # production
 /build
+/.firebase
+.firebaserc
+firebase.json
 
 #public
 /public/icon.png
@@ -26,9 +29,6 @@
 .env.test.local
 .env.production.local
 process.env
-/.firebase
-/.firebaserc
-/firebase.json
 
 npm-debug.log*
 yarn-debug.log*
